refactor(legacy-http): Neutralize shared-shell seams
Add neutral bookmark, push, and localization-script seams to the
shared legacy HTTP shell without changing runtime ownership.

Update the affected shell classes and AJAX paths to depend on the
new handles and interfaces, tighten the adapter boundary test, and
extend focused HTTP tests for the seam wiring.